# webmail

./: .env.example  .env.standalone  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.release  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml  go.mod  go.sum  justfile  static.go  static_dev.go
.github/workflows/: ci.yml  desktop-release.yml  gh-pages.yml  release.yml
cmd/seed/: main.go
cmd/webmail-api/: main.go
desktop/: .gitignore  SIGNING.md  build.sh  package-lock.json  package.json
desktop/src/: tauri-bridge.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
docs/: BLOCKERS.md
docs/plans/: 00-overview.md  01-backend-api.md  02-core-mail-ui.md  03-realtime-and-async.md  04-compose-and-attachments.md  05-search-and-filters.md  06-contacts.md  07-calendar.md  08-security.md  09-performance.md  10-settings-and-ux-polish.md  11-pgp-encryption.md  12-hosting-platform-changes.md  13-open-questions.md  14-ai-assistant.md  15-desktop-app.md  16-desktop-distribution.md  issues.md
internal/activity/: activity.go  blob.go  blob_test.go  imap.go
internal/config/: config.go  (+1 more)
migrations/: 00001_initial_schema.sql  00002_app_passwords.sql  00003_event_participants.sql  00004_domain_settings.sql  00005_fix_event_participants_pk.sql  00006_imap_import_jobs.sql
showcase/: index.html  playwright.config.ts
web/: index.html  package-lock.json  package.json  playwright.config.ts  showcase.config.ts  vite.config.ts
(+230 files in other folders)
